$Id$

2020-11-01  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Toshiba 2.5" HDD MK..76GSX/GS001A (GH pull/58).
	- Toshiba L200 (CMR), Toshiba L200 (SMR) (#1228, patch from #1377).
	- Western Digital Scorpio Blue Serial ATA: 320 GB (patch from #888).

	os_win32.cpp: Decode Windows 10 20H2 and Server 2004, 20H2
	build numbers.

2020-10-29  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: skip SCSI subenclosure devices on scan (#1299)

2020-10-24  Christian Franke  <franke@computer.org>

	drivedb.h:
	- HGST Travelstar Z5K1000: *B*610 variant.
	- Hitachi Travelstar 7K320: HITACHI*SA60 variant (#983).
	- Hitachi/HGST Deskstar 5K4000: Rename entry. Add HGST (#1060).
	- HGST Deskstar NAS: 8TB.
	- Hitachi/HGST Ultrastar 5K3000 (#1055).
	- Hitachi Ultrastar 7K3000: Variant without vendor name (#1361).
	- Hitachi/HGST Ultrastar 7K4000: Variant without vendor name (#1361).
	- HGST Ultrastar HC310/320 (#1157, #1365).

2020-10-19  Christian Franke  <franke@computer.org>

	drivedb.h:
	- ATP SATA III aMLC M.2 2242 SSD (based on patch from #1366).
	- Silicon Motion based OEM SSDs: TCSUNBOW X3 (#1349),
	  KingDian S370 (#1350), LDLC (#1353), Lenovo.
	- SSSTC ER2 GD/CD Series SSDs (based on patch from #1376).

2020-10-15  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Apacer SSDs (based on patch from #1202).
	- Crucial/Micron MX500 SSDs (FW <= M3CR032): Remove entry (#1227).
	- Crucial/Micron Client SSDs: Rename entry. Fix name of attribute 127.
	  This prevents false 'Currently unreadable (pending) sectors' warnings
	  from smartd (#1227, #1294, #1311, #1336).
	- Intel 730 and DC S35x0/3610/3700 Series SSDs: *H* variant (#1363).
	- Samsung based SSDs: 883 DCT (#1373).

	os_win32.cpp: Fix removal of trailing blanks.
	Silence misleading -Wstring-compare warning from g++ 10.2.0
	(GCC Bugzilla 97336).

2020-10-09  Christian Franke  <franke@computer.org>

	scsiprint.cpp: Don't print 'Accumulated power on time' if no