@@ -3,6 +3,9 @@ $Id$
 2020-11-01  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
+	- Marvell based SanDisk SSDs: 2TB SDSSDH3 (GH issues/67, GH pull/69),
+	  WD Blue SSD WDS100T2B0A (#1378).
+	- SanDisk based SSDs: SDSA6GM*.
 	- Toshiba 2.5" HDD MK..76GSX/GS001A (GH pull/58).
 	- Toshiba L200 (CMR), Toshiba L200 (SMR) (#1228, patch from #1377).
 	- Western Digital Scorpio Blue Serial ATA: 320 GB (patch from #888).
